tests/ui/lifetimes/hidden-lifetimes-in-type-paths.stderr
error: paths containing hidden lifetime parameters are deprecated
  --> $DIR/hidden-lifetimes-in-type-paths.rs:39:24
   |
LL | static USE_VIA_STATIC: ContainsLifetime = ContainsLifetime(&42);
   |                        ^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/hidden-lifetimes-in-type-paths.rs:1:9
   |
LL | #![deny(hidden_lifetimes_in_type_paths)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: indicate the anonymous lifetime
   |
LL | static USE_VIA_STATIC: ContainsLifetime<'_> = ContainsLifetime(&42);
   |                                        ++++

error: paths containing hidden lifetime parameters are deprecated
  --> $DIR/hidden-lifetimes-in-type-paths.rs:43:25
   |
LL |     use_via_turbofish::<ContainsLifetime>();
   |                         ^^^^^^^^^^^^^^^^
   |
help: indicate the anonymous lifetime
   |
LL |     use_via_turbofish::<ContainsLifetime<'_>>();
   |                                         ++++

error: paths containing hidden lifetime parameters are deprecated
  --> $DIR/hidden-lifetimes-in-type-paths.rs:46:27
   |
LL |     let _use_via_binding: ContainsLifetime;
   |                           ^^^^^^^^^^^^^^^^
   |
help: indicate the anonymous lifetime
   |
LL |     let _use_via_binding: ContainsLifetime<'_>;
   |                                           ++++

error: paths containing hidden lifetime parameters are deprecated
  --> $DIR/hidden-lifetimes-in-type-paths.rs:49:6
   |
LL |     <ContainsLifetime as UseViaTrait>::use_it();
   |      ^^^^^^^^^^^^^^^^
   |
help: indicate the anonymous lifetime
   |
LL |     <ContainsLifetime<'_> as UseViaTrait>::use_it();
   |                      ++++

error: paths containing hidden lifetime parameters are deprecated
  --> $DIR/hidden-lifetimes-in-type-paths.rs:52:6
   |
LL |     <ContainsLifetime>::use_it();
   |      ^^^^^^^^^^^^^^^^
   |
help: indicate the anonymous lifetime
   |
LL |     <ContainsLifetime<'_>>::use_it();
   |                      ++++

error: aborting due to 5 previous errors

